--- a/arquivo.css
+++ b/arquivo.css
@@ -1,7 +1,7 @@
 body{
 background-color: black;
 background-repeat: no-repeat;
-background-image: url('file:///C:/Users/idalm/Downloads/Logo-702-PNG-SEM-FUNDO%20(4).png');
+background-image: url('https://files.fm/f/8jpzak3xcw');
 background-size: 1600px 1200px;
 background-position: center;
 
