--- a/arquivo.css
+++ b/arquivo.css
@@ -2,7 +2,7 @@ body{
 background-color: black;
 background-repeat: no-repeat;
 background-image: url(https://files.fm/f/8jpzak3xcw);
-background-size: 1600px 1200px;
+background-size: cover;
 background-position: center;
 
 height: 200vh;
